Scroll to the search result selected by user

Scroll to page on which is the search result selected by user
when not in continuous mode.

https://bugzilla.gnome.org/show_bug.cgi?id=730252